# micro-wise-development

./: .flake8  .gitignore  LICENSE  README.md  control.ipynb  generate_toml.py  iframe.html  index.html  orchestration.md  project.json  pyproject.toml  requirements_dev.txt  sonnet.md
.github/workflows/: python-test.yaml  release.yaml
assets/: MWD.stories-CQICUPUu.js  MWD.stories-DL9X0h5P.js  entry-preview-BIPdQoJ2.js  entry-preview-em4f4XDn.js  iframe-CNFc2c41.js  iframe-DGataeNB.js  react-18-0x0-jU3e.js  react-18-BHRalLUg.js  react-18-BvkgxQrG.js
documents/meetup/: intro.md  intro_en.md
sb-addons/storybook-1/: manager-bundle.js
scripts/: generate_dev_repo.sh  release_finish.sh  setup_base.sh  setup_env.sh  setup_requirements.txt  unittest.sh
src/crimson/microwise_development/: __init__.py
src/crimson/microwise_development/abstraction/template_manager/: __init__.py  pyproject.py  requirements.py
src/crimson/microwise_development/abstraction/test_manager/: __init__.py  integration_test.py
storybook/: .gitignore  LICENSE  README.md  control.ipynb  index.html  package.json  tsconfig.json  vite.config.ts
storybook/.storybook/: brand.js  main.ts  manager-head.html  manager.ts  preview.ts
storybook/scripts/: after_release_finish.sh  generate_dev_repo.sh  remove_submodule.sh
storybook/src/: App.jsx
storybook/src/stories/: custom.d.ts
storybook/src/stories/docs/: MDRender.tsx  MWD.stories.tsx  old_readme.md  vision.md  vision_kr.md  what_is_mwd.md  what_is_mwd_kr.md
storybook/storybook-static/: iframe.html  index.json  project.json
storybook/storybook-static/assets/: MWD.stories-3uNzAR0C.js  entry-preview-BTGIb7_P.js  iframe-DbQ-tAVP.js
test/: test_example.py
